# emacs

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .mega-linter.yml  .travis.yml  .yamllint.yml  AppleMakefile  FTP  GNUmakefile  INSTALL  INSTALL.REPO  Makefile.in  Makefile.in.rej  README  Special_Versions  aclocal.m4  autogen.sh  cfg.mk  configure  configure.ac  configure.orig.sh  configure.rej  dumpemacs.c  dumpemacs.h  dumpemacs.sh  emacs-ppc.c  emacswrapper.c  filearch.rb  fixMakefile.rb  isemacsvalid.c  mac.h  make-dist  runit.c  test_mach_o_binary.c  unexmacosx.c  update-subdirs.sh  version.rb
.github/: dependabot.yml
.github/workflows/: codeql.yml  emacs-apple.yml  emacs.yml  mega-linter.yml
admin/: .gitignore  CPP-DEFINES  FOR-RELEASE  Makefile.am  Makefile.in  admin.el  alloc-colors.c  make-tarball.txt  merge-gnulib  update_autogen
admin/charsets/: .gitignore
admin/grammars/: Makefile.in
admin/notes/: copyright  git-workflow  unicode  years
admin/unidata/: .gitignore  Makefile.in  copyright.html  unidata-gen.el
build-aux/snippet/: link-warning.h
doc/: .gitignore  Makefile.am  Makefile.in
doc/emacs/: .gitignore  Makefile.in  emacsver.texi
doc/lispintro/: .gitignore  Makefile.in
doc/lispref/: .gitignore  Makefile.in  display.texi  frames.texi
doc/man/: .gitignore  Makefile.am  Makefile.in
doc/misc/: .gitignore  Makefile.in
emacs_card.pxd/: metadata.info
emacs_card.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
emacs_card.pxd/data/: 0B6092BA-7C1A-4856-B946-8C5F3543A095  7207D24D-36A6-46AB-95B9-23B4D704F94B
etc/: .gitignore  TUTORIAL.es  emacs.py  emacs.py.rej  emacs.py_2to3.diff  emacs_lldb.py  refcard.ps
etc/refcards/: emacsver.tex
etc/tutorials/: TUTORIAL.es
info/: .gitignore
leim/: .gitignore
lib/: .gitignore  Makefile.am  Makefile.in  autoregnulib.sh  cnd.c  fdatasync.c  getprogname.c  gnulib.mk  malloc.h  malloc.in.h  mktime.c  mtx.c  obstack.c  obstack.h  pty.h  pty.in.h  ref-add.sed  ref-del.sed  spawn.h  stdnoreturn.in.h  sys_times.in.h  thrd.c  threads.in.h  times.c  windows-timedmutex.h  windows-timedrecmutex.h
lib-src/: .gitignore  Makefile.in  alloca.c  b2m.c  chkmalloc.h  cvtmail.c  digest-doc.c  ebrowse.c  emacsclient.c  emacsserver.c  emacstool.c  etags.c  etags.c.rej  fakemail.c  getopt.c  getopt.h  getopt1.c  getopt_.h  getopt_int.h  getopt_long_test  getopt_test  gettext.h  hexl.c  leditcfns.c  make-docfile.c  movemail.c  ntlib.c  ntlib.h  pop.c  pop.h  profile.c  qsort.c  sorted-doc.c  tcp.c  test-distrib.c  update-game-score.c  update-game-score.c.rej  wincompat.h  wincompat_test  wincompat_test.c  (+1 more)
lisp/: .gitignore  Makefile.in  Makefile.in.rej  abbrev.el  ispell.el  loadup.el  minibuffer.el  simple.el
lisp/calc/: .gitignore
lisp/calendar/: .gitignore
lisp/cedet/: .gitignore
lisp/emulation/: .gitignore
lisp/erc/: .gitignore
lisp/eshell/: .gitignore
lisp/gnus/: .gitignore
lisp/international/: .gitignore
lisp/language/: .gitignore
lisp/leim/: .gitignore
lisp/leim/quail/: .gitignore
lisp/mail/: .gitignore
lisp/mh-e/: .gitignore
lisp/net/: .gitignore
lisp/nxml/: .gitignore
lisp/obsolete/: .gitignore
lisp/play/: .gitignore
lisp/progmodes/: .gitignore  python.el.rej
lisp/term/: .gitignore
lisp/textmodes/: .gitignore
lisp/url/: .gitignore
lispintro/: .gitignore  Makefile.in
lispref/: Makefile.in
lwlib/: .gitignore  Makefile.in  lwlib-Xaw.c  lwlib-Xaw.h  lwlib-Xlw.h  lwlib-Xm.c  lwlib.c  lwlib.h  xlwmenu.c
m4/: 00gnulib.m4  _Generic.m4  acl_old.m4  ax_append_flag.m4  ax_cflags_strict_prototypes.m4  ax_gcc_version.m4  ax_prototype_getsockname.m4  blocks.m4  compiler_id.m4  darwin.m4  extensions.m4  extern-inline.m4  functions_extra.m4  gcc-version.m4  getopt.m4  gnu-source.m4  gnulib-cache.m4  gnulib-common.m4  gnulib-comp.m4  grep.m4  headers_extra.m4  mmap-anon.m4  msvc-inval.m4  nocrash.m4  options.m4  override.m4  pkg_extra.m4  prototypes_extra.m4  restartable_syscalls.m4  stdint.m4  timezone_structs.m4  x11.m4
mac/: .gitignore  Makefile_un-MPW-ed  README  Xcode
mac/inc/: m-mac.h  m-mac.h.rej
mac/src/: Emacs.r  EmacsMPW.r  mac.c  macfns.c  macmenu.c  macterm.c
machocheck/: .gitignore  Makefile.in
machocheck/src/: create_configure.sh
machocheck/src/abstraction/: FileAbstraction.hpp  MachOFileAbstraction.hpp
man/: .gitignore  Makefile.in
msdos/: is_exec.c  sigaction.c
nextstep/: .gitignore  Makefile.in
nt/: .gitignore  Makefile.in  addsection.c  cmdproxy.c  ddeclient.c  gnulib.mk
nt/inc/: unistd.h
oldXMenu/: .gitignore  Activate.c  Create.c  DelPane.c  DelSel.c  Error.c  Locate.c  Makefile.in  Post.c  Recomp.c  SetPane.c  SetSel.c  XCrAssoc.c  copyright.h
po/: Makevars.in
src/: .gdbinit  .gitignore  Makefile.in  Makefile.in.rej  abbrev.c  acldef.h  alloc.c  alloca.c  atimer.c  blockinput.h  buffer.c  buffer.h  bytecode.c  callint.c  callproc.c  casetab.c  category.h  ccl.c  ccl.h  character.c  character.h  charset.c  charset.h  chartab.c  chpdef.h  cm.c  cm.h  cmds.c  coding.c  commands.h  composite.c  composite.h  conf_post.h  config.in  data.c  dbusbind.c  decompress.c  deps.mk  dispextern.h  dispnew.c  (+175 more)
src/dump_and_bootstrap_debug/: README  diff_u_otool_l.diff  diff_u_otool_lv.diff  diff_u_size_m_x_l.diff  otool_l_bootstrap-emacs.txt  otool_l_temacs.txt  otool_lv_bootstrap-emacs.txt  otool_lv_temacs.txt  size_m_x_l_bootstrap-emacs.txt  size_m_x_l_temacs.txt
src/m/: delta88k.h  mac.h  macppc.h  powermac.h  powermacintosh.h
src/s/: darwin.h  darwin.h.rej  ptx4.h  sol2-5.h
src/sys/: devinfo.h  hft.h
test/: .gitignore
test/automated/: Makefile.in
test/infra/: gitlab-ci.yml
(+36 files in other folders)
